[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://resources/img/player/idle/0000.png" type="Texture" id=2]
[ext_resource path="res://resources/img/player/idle/0001.png" type="Texture" id=3]
[ext_resource path="res://resources/img/player/idle/0002.png" type="Texture" id=4]
[ext_resource path="res://resources/img/player/idle/0003.png" type="Texture" id=5]
[ext_resource path="res://resources/img/player/idle/0004.png" type="Texture" id=6]
[ext_resource path="res://resources/img/player/hurt.png" type="Texture" id=7]
[ext_resource path="res://resources/img/player/win.png" type="Texture" id=8]
[ext_resource path="res://scenes/Bat.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 1.5
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
} ]
_sections_unfolded = [ "Resource" ]

[node name="Player" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z" ]
max_hp = 3

[node name="CollisionBox" type="CollisionShape2D" parent="." index="0"]

scale = Vector2( 3.34427, 3.22604 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "Idle"
frame = 3
playing = true
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Bat" parent="." index="2" instance=ExtResource( 9 )]

position = Vector2( 1.62927, 0 )
scale = Vector2( 0.949085, 1 )

[node name="SpawnPosition" type="Position2D" parent="." index="3"]

scale = Vector2( 0.1, 0.1 )
_sections_unfolded = [ "Transform" ]

[connection signal="game_over" from="." to="." method="_on_Player_game_over" flags=6]

[connection signal="round_ended" from="." to="." method="_on_Player_round_ended" flags=6]


